--- a/Sample stock paths.ipynb
+++ b/Sample stock paths.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "\n",
     "\n",
-    "In the below code, `T` represents the total time/length of the simulation (in years) and `n` represents the number of periods/steps the simulation will have.  The variables `alpha`, `delta`, `sigma` and `S0` should be self-explanatory.  Try editing those values!  After you edit, you will most likely need to rerun the codeblock, which you can do with `Ctrl - R`."
+    "In the below code, `T` represents the total time/length of the simulation (in years) and `n` represents the number of periods/steps the simulation will have.  The variables `alpha`, `delta`, `sigma` and `S0` should be self-explanatory.  Try editing those values!  After you edit, you will most likely need to rerun the codeblock, which you can do with `Ctrl - Enter`."
    ]
   },
   {
